src/app/component/dashboard/task/task.component.scss
.k-form-field button {
  background: cornflowerblue;
  border: none;
  margin-left: 2%;
}

.zIndex {
  z-index: -1;
}

.noTaskForUser {
  text-align: center;
  margin-top: 26vh;
}

.noTaskForUser .fa {
  font-size: 9vh;
}

.noTaskForUser p {
  font-size: 4vh;
  font-weight: bold;
}

.spinner.loading {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 55%;
}

.fromDate {
  margin: 1%;
  font-weight: bold;
  font-size: 2vh;
}

.workTime {
  pointer-events: none !important;
  opacity: 0.5;
  color: white;
  /*height: 2.7vh;
  width: 31.5vh;*/
  // height: 35px !important;
  height: 50px !important;
  width: 100%;
  border-radius: 2px;
}

.none {
  background: white !important;
}

.noTime {
  background: white !important;
}

.k-nonwork-hour {
  // pointer-events: none !important;
}

.noWorkTime {
  position: absolute;
  z-index: 10;
  top: 50%;
  left: 30%;
  width: 50%;
  text-align: center;
  color: red;
  font-weight: bold;
}

.k-scheduler-toolbar {
  display: initial !important;
}

.calendar {
  /*height: 76vh;*/
  overflow: auto;
  margin-top: 20px;
}

.tasks {
  overflow: hidden;
  /*height: 92vh;*/
}

/*@media (max-height: 768px) {
  .k-dialog-wrapper .k-dialog {
    margin-top: -30vh !important;
  }
}*/

.k-scheduler-toolbar {
  text-align: center !important;
  padding: 6px !important;
}

.k-dialog {
  overflow: auto !important;
  min-width: auto !important;
}

.dateWidth {
  margin-right: 2%;
  width: 70%;
}

.noPaddingNoMargin {
  margin-left: 0px;
  padding-left: 0px;
}

.customerInfo {
  font-size: 11.5px !important; 
  color: #727070 !important;
  margin-left: 2px !important;
}

kendo-multiselect {
  background: none !important;
}

.patient-options {
  font-size: 9px;
}

kendo-scheduler .k-event:hover {
  cursor: pointer;
  filter: brightness(0.9);
}

.eventName {
  font-weight: bold; 
  padding: 0px; 
  color: black;
  font-size: 13px !important;
  margin: 0px;
  line-height: initial;
}

.eventTitle {
  color: black;
  font-size: 12px !important;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: pre-line;
  margin: 0px;
  padding: 0px !important;
  line-height: initial;
  // word-spacing: 9999px;
}

.quickPreviewWindow {
  background: #6673FC !important;
}

.quickPreviewWindow kendo-window-titlebar {
  padding: 5px 24px !important;
}

.quickPreviewWindow .k-window-content {
  padding: 0px !important;
}

.customerNameEvent {
  padding: 0px 24px;
  color: #fff;
  font-weight: 300;
}

.customerTitleEvent {
  padding: 24px;
  background: #fff !important;
}

kendo-colorpalette {
  width: 100% !important;
}

k-window-content {
  max-width: 700px !important;
}

/*.eventDiv {
  top: 38%;
  vertical-align: middle;
  text-align: center;
  width: 100%;
}*/

.eventDiv {
  width: 90%;
  padding-top: 8px;
  height: 85%;
  overflow: hidden;
}

kendo-scheduler .k-event {
  width: 19.5% !important;
  padding: 0px !important;
  margin-top: 1px;
  border: 2px solid !important;
}

.textAreaInput {
  width: 90% !important;
  resize: none;
  overflow: auto;
  height: 80px;
  padding: 7px;
}

.k-scheduler-content { 

  height: 300px;
}

